Add Flint mod loader core functionality with @Mod annotation support